# jhajduga.github.io

./: CMakeLists.txt  LICENSE  README.md  README_PROPOSAL.md  SUMMARY.md  TODO.md  book.toml  g4rt_env.yml
.github/workflows/: mdbook.yml
app/: CMakeLists.txt
book/: book.toml
core/: CMakeLists.txt
core/geometry/Linac/BeamCollimation/: README.md
core/geometry/Linac/BeamCollimation/MLC/: README.md
core/geometry/Patient/D3DDetector/: README.md
core/geometry/Patient/WaterPhantom/test/: water_phantom_1x1x1_test.toml
core/utilities/IGeant4/: README.md
core/utilities/python/: dicom_ct.py  dicom_rtplan_angle.py  dicom_rtplan_dose.py  dicom_rtplan_jaws.py  dicom_rtplan_mlc.py  field_mask_png.py  simplified_mesh.py  xmlx_geometry_parser.py
data/: README.md
data/config/: ct_slice_template.dcm  deafult_logger.toml  hounsfield_scale_120keV.json  hounsfield_scale_120keV.toml  hounsfield_scale_60keV.json  hounsfield_scale_60keV.toml  material_dictionary.json  tests_logger.toml
data/dose3d/geo/: ReadMe.md
data/dose3d/geo/Tower/: OneTower.stl  november_tower_2x2x32.stl
data/dose3d/geo/WaterPhantom/: PhantomTop.stl
data/dose3d/geo/WaterPhantom/WP_Modular/: d3df_scintillator_mapping_db.xlsx
data/gps/: gpsCLinac_pre.mac  gps_almost_ok.mac  gps_alpha_5390_kev.mac  gps_speed_test.mac
data/plan/TB21122024/static/: RP.1.2.246.352.71.5.528868944050.1691284.20241220161403.dcm
data/plan/dicom/: example-imrt.dcm  example-vmat.dcm  prostate_imrt.dcm
docs/: book.toml
docs/src/: Dose3D_single_module.md  Linux-WSL-CVMFS_work_in_progress.md  SUMMARY.md  Testbeam_052023.md  Ubuntu-CVMFS_work_in_progress.md  index.md  run_g4rt.md  toml_job_structure.md  wsl-ubuntu-22.04.md
docs/src/dev/: deb_deploy.md  dockerfile  g4rt.yml  gtest.md  index.md  spdlog_and_logsvc.md
executables/: CMakeLists.txt
jobs/: CT_Test.toml  TestJob.toml  ct_cvs.toml  job_new_structure_todo.toml  log.toml  rtplan_job.toml  single_config_job.toml  speed_test_job.toml  temo_job.toml  water_phantom_gps.toml
jobs/cellSize/: cell_size_study_test.toml
jobs/db/: basic_iba_job.toml
jobs/job_builder/: generate_jobs.py
jobs/mlsr/: srunet3d_4x4x2_10x10x10.toml
jobs/srunet3d/: asf_fsf_job.toml  mlsr_4x4x4_10x10x10_flsz_20x20mm_rot_phsp.toml  mlsr_4x4x4_10x10x10_flsz_25x25mm_top0.0_gpsFunnyPlastic.toml  srunet3d_2x2x2_10x10x10.toml  srunet3d_4x4x2_10x10x10.toml
jobs/srunet3d/production/: srunet3d_4x4x2_10x10x10_beam0.toml  srunet3d_4x4x2_10x10x10_beam1.toml  srunet3d_4x4x2_10x10x10_beam2.toml  srunet3d_4x4x2_10x10x10_beam3.toml  srunet3d_4x4x2_10x10x10_beam4.toml
jobs/srunet3d/testing/: fsf_inpact_test.toml
jobs/testbeam/: 3cells_in_z.toml  ModularPhantom3MF.toml  alpha_source.toml  angle_scan_plan.toml  job_stl_single_module_table.toml  no_stl_test.toml  single_config_job.toml  single_file_table.toml  tower.toml  tower_3x3x32_flsz_2x2.toml
jobs/testbeam/16112024/: pdd_wp_simpified.toml  profile_wp_simpified.toml
jobs/testbeam/16112024/PDD/: pdd_wp_3mf_0mm.toml  pdd_wp_3mf_10mm.toml  pdd_wp_3mf_2mm.toml  pdd_wp_3mf_4mm.toml  pdd_wp_3mf_6mm.toml  pdd_wp_3mf_8mm.toml
jobs/testbeam/16112024/PROF_Y/: profile_wp_3mf_y_0mm.toml  profile_wp_3mf_y_10mm.toml  profile_wp_3mf_y_12mm.toml  profile_wp_3mf_y_14mm.toml  profile_wp_3mf_y_16mm.toml  profile_wp_3mf_y_18mm.toml  profile_wp_3mf_y_20mm.toml  profile_wp_3mf_y_22mm.toml  profile_wp_3mf_y_24mm.toml  profile_wp_3mf_y_26mm.toml  profile_wp_3mf_y_28mm.toml  profile_wp_3mf_y_2mm.toml  profile_wp_3mf_y_30mm.toml  profile_wp_3mf_y_32mm.toml  profile_wp_3mf_y_34mm.toml  profile_wp_3mf_y_36mm.toml  profile_wp_3mf_y_38mm.toml  profile_wp_3mf_y_40mm.toml  profile_wp_3mf_y_42mm.toml  profile_wp_3mf_y_44mm.toml  profile_wp_3mf_y_46mm.toml  profile_wp_3mf_y_48mm.toml  profile_wp_3mf_y_4mm.toml  profile_wp_3mf_y_50mm.toml  profile_wp_3mf_y_52mm.toml  profile_wp_3mf_y_54mm.toml  profile_wp_3mf_y_56mm.toml  profile_wp_3mf_y_58mm.toml  profile_wp_3mf_y_60mm.toml  profile_wp_3mf_y_6mm.toml  profile_wp_3mf_y_8mm.toml
jobs/testbeam/21122024/: ImRT_g4model_full_phantom_with_hips.toml  ImRT_g4model_just_box.toml
jobs/testbeam/tray/: basic.toml  multitray_one_stl_table.toml
jobs/water_phantom/: water_phantom.toml
jobs/web/: web_job.toml
scripts/: asf_dev.py  data_reader.py  download_phsp.py  drawProfiles.py  drawProfiles_commisioning.py  g4rt.sh  mlc.mac  ntuple2customphsp.py  ntuple2pandas.py  plot_dose.py  plot_from_csv.py  plot_weighted_influence.py  plot_weighted_influence_3d.py  plotting_utilities.py  scoring_post.mac  scoring_pre.mac  setup-cvmfs-centos7.sh  setup-cvmfs-centos7_gpu2.sh  setup-cvmfs-ubuntu2004.sh  smoothing_functions.py  time_dose_accumulate.c  voxel_plotter_ct_csv.py
scripts/Plotters/: pythoning.py  pythoning2.py  pythoning_3.py  pythoning_4.py  vtk_plotter.py
scripts/gps/: gps.mac  gpsCLiniac.mac  gpsCLiniac_but_parallel.mac  gps_almost_liniac.mac  gps_cd109_gammas_pre.mac  gps_mono_gammas_pre.mac
src/: SUMMARY.md
submodules/: README.md
submodules/d3df-patients/: LICENSE  README.md  environment.yml
submodules/d3df-patients/patient/dicom/patient_01_CT/: README.md
submodules/d3df-patients/patient/phantoms/IBA_ImRT_phantom/: D3DF_bodies.xlsx  Phantom_v18.3mf
submodules/d3df-patients/patient/phantoms/modular_water_phantom/: D3DF_bodies.xlsx  WaterPhantom_v8.3mf
submodules/d3df-patients/utils/: build_db_from_fusion_export.py
submodules/d3df-patients/utils/config/: material_dictionary_iba.json  material_dictionary_modular_water_phantom.json
submodules/d3df-patients/utils/mesh_visualizer/: phantom_model_vis.py
